baremetal/demos/app.fabrikam.pl/service-a/service-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a
  namespace: app-fabrikam-pl-a
spec:
  replicas: 2
  selector:
     matchLabels:
       app: service-a
  template:
    metadata:
      labels:
        app: service-a
    spec:
      containers:
      - name: service-a-nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /etc/nginx
          readOnly: true
          name: nginx-conf
        - mountPath: /html
          readOnly: true
          name: index-html
        - mountPath: /var/log/nginx
          name: log
        resources:
          requests:
            memory: 20Mi
            cpu: 5m
          limits:
            memory: 100Mi
            cpu: 50m
      volumes:
      - name: nginx-conf
        configMap:
          name: service-a-conf
          items:
            - key: nginx.conf
              path: nginx.conf
      - name: index-html
        configMap:
          name: service-a-conf
          items:
            - key: index.html
              path: index.html
      - name: log
        emptyDir: {}
      affinity:
        # the following defintion will make sure replicas of this deployment are placed on different nodes
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - service-a
              topologyKey: kubernetes.io/hostname
---
apiVersion: v1
kind: Service
metadata:
  name: service-a
  namespace: app-fabrikam-pl-a
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: service-a
